@@ -1,3 +1,9 @@
+2008-10-01  Richard Henderson  <rth@redhat.com>
+
+	PR tree-opt/35737
+	* tree-complex.c (set_component_ssa_name): Don't optimize
+	is_gimple_min_invariant values with ssa_names in abnormal phis.
+
 2008-09-30  Joseph Myers  <joseph@codesourcery.com>
 
 	* ifcvt.c (noce_emit_store_flag): If using condition from original
@@ -60,7 +66,7 @@
 2008-09-18  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline:
-        2008-04-08  Janis Johnson  <janis187@us.ibm.com>
+	2008-04-08  Janis Johnson  <janis187@us.ibm.com>
 	PR target/35620
 	* config/rs6000/rs6000.c (rs6000_check_sdmode): Handle additional
 	kinds of indirect references.
